[package]
name = "radixfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "3.0", features = ["cargo"] }
env_logger = "0.9.1"
fuser = "0.11.1"
libc = "0.2.133"
log = "0.4.17"
radixdb = "0.2.2"
serde = { version = "1.0.102", features = ["std", "derive"] }

