[package]
name = "radixfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
bincode = "1.3.3"
clap = { version = "3.0", features = ["cargo"] }
env_logger = "0.9.1"
fuser = "0.11.1"
hex = "0.4.3"
libc = "0.2.133"
log = "0.4.17"
parking_lot = "0.12.1"
radixdb = { path = "../radixdb" }
serde = { version = "1.0.102", features = ["std", "derive"] }

